# Team-29

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: COS214___Project.vpp  COS214___Project.vpp.bak_001d  COS214___Project.vpp.bak_002d  COS214___Project.vpp.bak_003d  COS214___Project.vpp.bak_004d  COS214___Project.vpp.bak_005d  COS214___Project.vpp.bak_006d  COS214___Project.vpp.bak_007d  COS214___Project.vpp.bak_008d  COS214___Project.vpp.bak_009d  COS214___Project.vpp.bak_010d  COS214___Project.vpp.bak_011d  COS214___Project.vpp.bak_012d  COS214___Project.vpp.bak_013d  COS214___Project.vpp.bak_014d  COS214___Project.vpp.bak_015d  COS214___Project.vpp.bak_016d  COS214___Project.vpp.bak_017d  COS214___Project.vpp.bak_018d  COS214___Project.vpp.bak_019d  COS214___Project.vpp.bak_020d  COS214___Project.vpp.bak_021d
html/: Airport_8h_source.html  BuildingComponent_8h_source.html  BuildingCreator_8h_source.html  BuildingManager_8h_source.html  BuildingVisitor_8h_source.html  Building_8h_source.html  Bus_8h_source.html  CityMemento_8h_source.html  CitySaves_8h_source.html  City_8h_source.html  CommercialBuildingCreator_8h_source.html  CommercialBuilding_8h_source.html  CompositeNeighbourhood_8h_source.html  CulturalCentre_8h_source.html  Estate_8h_source.html  Factory_8h_source.html  Ferry_8h_source.html  Government_8h_source.html  House_8h_source.html  IndustrialBuildingCreator_8h_source.html  IndustrialBuilding_8h_source.html  Interface_8h_source.html  LandmarkBuildingCreator_8h_source.html  LandmarkBuilding_8h_source.html  Mall_8h_source.html  ModeOfTransport_8h_source.html  Monument_8h_source.html  Neutral_8h_source.html  Office_8h_source.html  Park_8h_source.html  Plant_8h_source.html  Policy_8h_source.html  PowerPlantDecorator_8h_source.html  (+310 more)
src/: Building.h  BuildingCreator.h  Bus.cpp  CMakeLists.txt  City.cpp  City.h  Command.h  CommercialBuilding.cpp  ConstructBuildingCommand.cpp  ConstructBuildingCommand.h  Government.cpp  Government.h  IndustrialBuilding.cpp  IndustrialBuildingCreator.cpp  Interface.cpp  Interface.h  LandmarkBuilding.cpp  LandmarkBuildingCreator.cpp  LandmarkBuildingCreator.h  ModeOfTransport.h  OperationalState.cpp  Policy.h  PowerPlantDecorator.h  ResidentialBuilding.cpp  ResidentialBuilding.h  SetPolicyCommand.cpp  SetPolicyCommand.h  TaxCollector.cpp  TaxCollector.h  Train.cpp  UnderConstructionState.h  UtilityFacade.h  Visitor.h  main.cpp
src/Satisfaction/: Neutral.cpp  Neutral.h  SatisfactionState.h  Satisfied.h  Unsatisfied.h  VerySatisfied.h
src/building/: Apartment.cpp  Apartment.h  Apartments.cpp  Apartments.h  Building.cpp  Building.h  BuildingComponent.h  BuildingCreator.h  BuildingState.h  CMakeLists.txt  CommercialBuilding.cpp  CommercialBuilding.h  CommercialBuildingCreator.cpp  CommercialBuildingCreator.h  CompositeNeighbourhood.cpp  CompositeNeighbourhood.h  CulturalCentre.cpp  CulturalCentre.h  Estate.cpp  Estate.h  Estates.cpp  Estates.h  Factories.cpp  Factories.h  Factory.cpp  Factory.h  House.cpp  House.h  Houses.cpp  Houses.h  IndustrialBuilding.cpp  IndustrialBuilding.h  IndustrialBuildingCreator.cpp  IndustrialBuildingCreator.h  LandmarkBuilding.cpp  LandmarkBuilding.h  LandmarkBuildingCreator.cpp  LandmarkBuildingCreator.h  Mall.cpp  Mall.h  (+26 more)
src/buildingComposite/: Building.cpp  Building.h  BuildingComponent.cpp  BuildingComponent.h  CMakeLists.txt  CompositeNeighbourhood.cpp  CompositeNeighbourhood.h
src/buildingComposite/commercial/: CMakeLists.txt  CommercialBuilding.cpp  CommercialBuilding.h  Mall.cpp  Mall.h  Office.cpp  Office.h  Shop.cpp  Shop.h
src/buildingComposite/industrial/: CMakeLists.txt  Facotry.cpp  Factory.h  IndustrialBuilding.cpp  IndustrialBuilding.h  Plant.cpp  Plant.h  Warehouse.cpp  Warehouse.h
src/buildingComposite/landmark/: CMakeLists.txt  CulturalCentre.cpp  CulturalCentre.h  LandmarkBuilding.cpp  LandmarkBuilding.h  Monument.cpp  Monument.h  Park.cpp  Park.h
src/buildingComposite/residential/: CMakeLists.txt  Estate.cpp  Estate.h  House.cpp  House.h  ResidentialBuilding.cpp  ResidentialBuilding.h  TownHouse.cpp  TownHouse.h
src/buildingFactory/: BuildingCreator.h  CMakeLists.txt  CommercialBuildingCreator.cpp  CommercialBuildingCreator.h  IndustrialBuildingCreator.cpp  IndustrialBuildingCreator.h  LandmarkBuildingCreator.cpp  LandmarkBuildingCreator.h  ResidentialBuildingCreator.cpp  ResidentialBuildingCreator.h
src/command/: AllocateResourcesCommand.cpp  AllocateResourcesCommand.h  CMakeLists.txt  ConstructBuildingCommand.cpp  ConstructBuildingCommand.h  Policy.cpp  SetPolicyCommand.cpp
src/government/: CMakeLists.txt  Government.cpp  Government.h  Policies.txt  Policy.cpp  Policy.h  TaxCollector.h
src/managers/: BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  City.cpp  City.h  Interface.cpp  Interface.h  Visitor.h
src/memento/: CMakeLists.txt  CityMemento.cpp  CityMemento.h  CitySaves.cpp  CitySaves.h
src/satisfaction/: CMakeLists.txt  Neutral.cpp  Neutral.h  SatisfactionState.h  Satisfied.cpp  Satisfied.h  Unsatisfied.cpp  Unsatisfied.h  VerySatisfied.cpp  VerySatisfied.h  VeryUnsatisfied.cpp  VeryUnsatisfied.h
src/transport/: Airport.cpp  Airport.h  Bus.cpp  Bus.h  CMakeLists.txt  Ferry.cpp  Ferry.h  ModeOfTransport.cpp  ModeOfTransport.h  Train.cpp  Train.h  TransportManager.cpp  TransportManager.h
src/transportation/: Airport.cpp  Airport.h  Bus.h  Ferry.cpp  Ferry.h  ModeOfTransport.cpp  ModeOfTransport.h
src/utility/: CMakeLists.txt  PowerPlantDecorator.cpp  PowerPlantDecorator.h  SewageManagementDecorator.h  SewagemanagementDecorator.cpp  UtilitiesDecorator.cpp  UtilitiesDecorator.h  UtilityFacade.cpp  UtilityFacade.h  WasteManagementDecorator.cpp  WasteManagementDecorator.h  WaterSupplyDecorator.cpp  WaterSupplyDecorator.h
src/visitor/: BuildingVisitor.h  CMakeLists.txt  LivingCapacityVisitor.cpp  LivingCapacityVisitor.h  TaxCollector.cpp  TaxCollector.h  TaxRateVisitor.cpp  TaxRateVisitor.h  TotalVisitor.cpp  TotalVisitor.h  Visitor.h
test/: CMakeLists.txt
test/buildingComposite/: CMakeLists.txt
test/visitor/: CMakeLists.txt
(+170 files in other folders)
